Fix exercises not showing on edit workout page, and don't show table if there are no exercises

--- a/resources/assets/sass/_base.scss
+++ b/resources/assets/sass/_base.scss
@@ -9,9 +9,12 @@ html, body {
 }
 
 //Try to fix rendering problem when scrolling on iOS
-*:not(html) {
-	-webkit-transform: translate3d(0, 0, 0);
-}
+//.container {
+//	-webkit-transform: translate3d(0, 0, 0);
+//	* {
+//		-webkit-transform: translate3d(0, 0, 0);
+//	}
+//}
 
 $footerHeight: 25px;
 
